tests/asm/error/label_error_1.s
.name "zork"
.comment "I'M ]ALIIIIVE"


#le_12=! should be error

le_12=!

live	%1

liv: live %1
	
